syntax = "proto3";

import "google/protobuf/empty.proto";

package piggymetrics.auth;

option java_package = "com.github.galleog.piggymetrics.auth.grpc";
option java_outer_classname = "UserServiceProto";

// User of the system.
message User {
    // Required. User's name
    string user_name = 1;
    // Required. User's password
    string password = 2;
}

// Service to work with users.
service UserService {
    // Creates a new user.
    rpc CreateUser (User) returns (google.protobuf.Empty);
}